# bootcamp-functions

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality.yaml  deploy-functions.yaml  deploy-pr.yaml  generate-matrix.yaml
common/: function_config_prod.yaml  function_config_test.yaml  oauth.py
execute_rest_extractor/: extractor_config.yaml  function_config_prod.yaml  function_config_test.yaml  handler.py  requirements.txt  run_locally.py
execute_rest_extractor/ice_cream_factory_datapoints_extractor/: config.py  datapoints_backfiller.py  datapoints_streamer.py  extractor.py  ice_cream_factory_api.py
execute_rest_extractor/schedules/: prod.yaml  test.yaml
oee_timeseries/: calculations.py  function_config.yaml  function_config_prod.yaml  function_config_test.yaml  handler.py  requirements.txt  run_locally.py  tools.py
oee_timeseries/schedules/: prod.yaml  test.yaml
